// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleElements FourthLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 0.75rem;
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
  }
}

<h4
  className="c0"
>
  H4
</h4>
`;

exports[`TitleElements SecondLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 1rem;
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1.375rem;
  }
}

<h2
  className="c0"
>
  H2
</h2>
`;

exports[`TitleElements ThirdLevelTtitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 0.875rem;
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1.125rem;
  }
}

<h3
  className="c0"
>
  H3
</h3>
`;
